--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -57,12 +57,11 @@
 
 <div align="center">
 Subscribe to Podcast in Your App Store<p/><br/>
-<a href="https://itunes.apple.com/us/podcast/using-
-~  58 reflection/id1294155220?mt=2"><img src="https://static1.squarespace.com/static/54833f25e4b05657e7b424f8/t/59dc6ca5a8b2b02864ce02af/1508997084857/subscribe_apple.png?format=original" /></a>
+<a href="https://itunes.apple.com/us/podcast/YOUR_PODCAST"><img src="/img/subscribe_apple.png"/></a>
 </div>
 <p/>
 <div align="center">
-<a href="https://play.google.com/music/listen#/ps/Is5cvsqetiqj2g6aev2nqu726x"><img src="https://static1.squarespace.com/static/54833f25e4b05657e7b424f8/t/59dc6fe68fd4d2e11c8f7127/1507618914943/gcloud.png?format=original" /></a>
+<a href="https://play.google.com/music/listen#/ps/YOUR_PODCAST"><img src="/img/gcloud.png"/></a>
 </div>
 
 <div align="center">
@@ -128,6 +127,6 @@ Subscribe to Podcast in Your App Store<p/><br/>
   <a href="https://twitter.com/{{ site.twitter_nick }}" class="twitter-follow-button" data-show-count="false">Follow @{{ site.twitter_nick }}</a>
   </div>
   <div align="center">
-  <a href="https://twitter.com/marksweiss" class="twitter-follow-button" data-show-count="false">Follow @marksweiss</a>
+  <a href="https://twitter.com/YOUR_TWITTER_HANDLE" class="twitter-follow-button" data-show-count="false">Follow @YOUR_TWITTER_HANDLE</a>
   </div>
 {% endif %}
