Fix feeds and feed pages for podcast episodes and blog

--- a/_includes/post.html
+++ b/_includes/post.html
@@ -40,4 +40,13 @@
     {% unless page.url == '/index.html' %}{% include isso_thread.html %}{% endunless %}
     <hr>
   </section>
+{% else %}
+  <section id="{{ post.id | sha1:8 }}" class="active">
+    {% include first_post_header.html %}
+    {{ post.content }}
+    {{ site | flattr_button:post }}
+    {% unless page.url == '/index.html' %}{% include disqus_thread.html %}{% endunless %}
+    {% unless page.url == '/index.html' %}{% include isso_thread.html %}{% endunless %}
+    <hr>
+  </section>
 {% endif %}
